transitions on mobile fixed

--- a/src/styles/pages/About.module.scss
+++ b/src/styles/pages/About.module.scss
@@ -82,7 +82,9 @@
     @media (max-width: 414px) {
         object-fit: cover;
         overflow: inherit;
-        height: 73%;
+        width: 220%;
+        height: 100%;
+        bottom: 0;
     }
 }
 
@@ -94,6 +96,11 @@
     align-items: center;
     gap: 2em;
     bottom: 1%;
+
+    @media (max-width: 414px) {
+        position: relative;
+        bottom: 0;
+    }
 }
 
 .arrowCircle {
@@ -111,6 +118,7 @@
     @media (max-width: 414px) {
         width: 30px;
         height: 30px;
+        bottom: 0;
 
         svg {
             width: 15px;
@@ -135,6 +143,7 @@
     @media (max-width: 414px) {
         @include text(20px, 29px, 800, Codenext);
         @include fontBackground(#6158F3, #41C0FF, 19.19%, 96.56%);
+        top: 0;
 
         flex-direction: column;
         p {
@@ -220,6 +229,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    @media (max-width: 414px) {
+        position: relative;
+        width: 100%;
+        height: 50%;
+        margin-top: 3em;
+        margin-bottom: 2em;
+    }
 }
 
 .textures {
